// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When a model field has a documentation comment, then it is used for the JSDoc of that field and its $description field 1`] = `
"import * as Nexus from 'nexus'
import * as NexusCore from 'nexus/dist/core'

//
// Types
//

declare namespace $Types {
  // Models

  /**
    * Nexus \`objectType\` related configuration based on the \`SomeModel\` model in your Prisma schema.
    *
    * ### ️⚠️ Missing Documentation for this Model
    * 
    * Automatically ✨ enrich this JSDoc with information about your enum
    * type by documenting it in your Prisma schema. For example:
    *
    * 
    * \`\`\`prisma
    * /// Lorem ipsum dolor sit amet...
    * model SomeModel {
    *   foo  String
    * }
    * \`\`\`
    * 
    * Learn more about Prisma Schema documentation comments [here](https://www.prisma.io/docs/concepts/components/prisma-schema#comments).
    *
    * @example
    *
    * import { objectType } from 'nexus'
    * import { SomeModel } from 'nexus-prisma'
    *
    * objectType({
    *   name: SomeModel.$name
    *   description: SomeModel.$description
    *   definition(t) {
    *     t.field(SomeModel.id.name, SomeModel.id)
    *   }
    * }) 
    */
  interface SomeModel {
    $name: 'SomeModel'
    $description: null
    /**
     * Nexus \`t.field\` related configuration based on the \`SomeModel.id\` field in your Prisma schema.
      *
      * Some documentation
      *
      * @example
      *
      * import { objectType } from 'nexus'
      * import { SomeModel } from 'nexus-prisma'
      *
      * objectType({
      *   name: SomeModel.$name
      *   description: SomeModel.$description
      *   definition(t) {
      *     t.field(SomeModel.id.name, SomeModel.id)
      *   }
      * }) 
      */
    id: {
      /**
       * The name of this field.
       */
      name: 'id'
    
      /**
       * The type of this field.
       */
      type: NexusCore.NexusNonNullDef<'ID'>
    
      /**
       * The documentation of this field.
       */
      description: string
    }
  }

  // Enums

  // N/A –– You have not defined any models in your Prisma schema file.
}


//
// Exports
//

// Models

/**
  * Nexus \`objectType\` related configuration based on the \`SomeModel\` model in your Prisma schema.
  *
  * ### ️⚠️ Missing Documentation for this Model
  * 
  * Automatically ✨ enrich this JSDoc with information about your enum
  * type by documenting it in your Prisma schema. For example:
  *
  * 
  * \`\`\`prisma
  * /// Lorem ipsum dolor sit amet...
  * model SomeModel {
  *   foo  String
  * }
  * \`\`\`
  * 
  * Learn more about Prisma Schema documentation comments [here](https://www.prisma.io/docs/concepts/components/prisma-schema#comments).
  *
  * @example
  *
  * import { objectType } from 'nexus'
  * import { SomeModel } from 'nexus-prisma'
  *
  * objectType({
  *   name: SomeModel.$name
  *   description: SomeModel.$description
  *   definition(t) {
  *     t.field(SomeModel.id.name, SomeModel.id)
  *   }
  * }) 
  */
export const SomeModel: $Types.SomeModel

// Enums

// N/A –– You have not defined any models in your Prisma schema file."
`;

exports[`When a model field has no documentation comment, then it gets the default JSDoc and its description field is null 1`] = `
"import * as Nexus from 'nexus'
import * as NexusCore from 'nexus/dist/core'

//
// Types
//

declare namespace $Types {
  // Models

  /**
    * Nexus \`objectType\` related configuration based on the \`SomeModel\` model in your Prisma schema.
    *
    * ### ️⚠️ Missing Documentation for this Model
    * 
    * Automatically ✨ enrich this JSDoc with information about your enum
    * type by documenting it in your Prisma schema. For example:
    *
    * 
    * \`\`\`prisma
    * /// Lorem ipsum dolor sit amet...
    * model SomeModel {
    *   foo  String
    * }
    * \`\`\`
    * 
    * Learn more about Prisma Schema documentation comments [here](https://www.prisma.io/docs/concepts/components/prisma-schema#comments).
    *
    * @example
    *
    * import { objectType } from 'nexus'
    * import { SomeModel } from 'nexus-prisma'
    *
    * objectType({
    *   name: SomeModel.$name
    *   description: SomeModel.$description
    *   definition(t) {
    *     t.field(SomeModel.id.name, SomeModel.id)
    *   }
    * }) 
    */
  interface SomeModel {
    $name: 'SomeModel'
    $description: null
    /**
     * Nexus \`t.field\` related configuration based on the \`SomeModel.id\` field in your Prisma schema.
      *
      * ### ️⚠️ Missing Documentation for this Model
      * 
      * Automatically ✨ enrich this JSDoc with information about your enum
      * type by documenting it in your Prisma schema. For example:
      *
      * \`\`\`prisma
      * model SomeModel {
      *   /// Lorem ipsum dolor sit amet.
      *   id  String
      * }
      * \`\`\`
      *
      * Learn more about Prisma Schema documentation comments [here](https://www.prisma.io/docs/concepts/components/prisma-schema#comments).
      *
      * @example
      *
      * import { objectType } from 'nexus'
      * import { SomeModel } from 'nexus-prisma'
      *
      * objectType({
      *   name: SomeModel.$name
      *   description: SomeModel.$description
      *   definition(t) {
      *     t.field(SomeModel.id.name, SomeModel.id)
      *   }
      * }) 
      */
    id: {
      /**
       * The name of this field.
       */
      name: 'id'
    
      /**
       * The type of this field.
       */
      type: NexusCore.NexusNonNullDef<'ID'>
    
      /**
       * The documentation of this field.
       */
      description: undefined
    }
  }

  // Enums

  // N/A –– You have not defined any models in your Prisma schema file.
}


//
// Exports
//

// Models

/**
  * Nexus \`objectType\` related configuration based on the \`SomeModel\` model in your Prisma schema.
  *
  * ### ️⚠️ Missing Documentation for this Model
  * 
  * Automatically ✨ enrich this JSDoc with information about your enum
  * type by documenting it in your Prisma schema. For example:
  *
  * 
  * \`\`\`prisma
  * /// Lorem ipsum dolor sit amet...
  * model SomeModel {
  *   foo  String
  * }
  * \`\`\`
  * 
  * Learn more about Prisma Schema documentation comments [here](https://www.prisma.io/docs/concepts/components/prisma-schema#comments).
  *
  * @example
  *
  * import { objectType } from 'nexus'
  * import { SomeModel } from 'nexus-prisma'
  *
  * objectType({
  *   name: SomeModel.$name
  *   description: SomeModel.$description
  *   definition(t) {
  *     t.field(SomeModel.id.name, SomeModel.id)
  *   }
  * }) 
  */
export const SomeModel: $Types.SomeModel

// Enums

// N/A –– You have not defined any models in your Prisma schema file."
`;

exports[`When a model has a documentation comment, then it is used for the JSDoc of that model and its $description field 1`] = `
"import * as Nexus from 'nexus'
import * as NexusCore from 'nexus/dist/core'

//
// Types
//

declare namespace $Types {
  // Models

  /**
    * Nexus \`objectType\` related configuration based on the \`SomeModel\` model in your Prisma schema.
    *
    * Some documentation
    *
    * @example
    *
    * import { objectType } from 'nexus'
    * import { SomeModel } from 'nexus-prisma'
    *
    * objectType({
    *   name: SomeModel.$name
    *   description: SomeModel.$description
    *   definition(t) {
    *     t.field(SomeModel.id.name, SomeModel.id)
    *   }
    * }) 
    */
  interface SomeModel {
    $name: 'SomeModel'
    $description: 'Some documentation'
    /**
     * Nexus \`t.field\` related configuration based on the \`SomeModel.id\` field in your Prisma schema.
      *
      * ### ️⚠️ Missing Documentation for this Model
      * 
      * Automatically ✨ enrich this JSDoc with information about your enum
      * type by documenting it in your Prisma schema. For example:
      *
      * \`\`\`prisma
      * model SomeModel {
      *   /// Lorem ipsum dolor sit amet.
      *   id  String
      * }
      * \`\`\`
      *
      * Learn more about Prisma Schema documentation comments [here](https://www.prisma.io/docs/concepts/components/prisma-schema#comments).
      *
      * @example
      *
      * import { objectType } from 'nexus'
      * import { SomeModel } from 'nexus-prisma'
      *
      * objectType({
      *   name: SomeModel.$name
      *   description: SomeModel.$description
      *   definition(t) {
      *     t.field(SomeModel.id.name, SomeModel.id)
      *   }
      * }) 
      */
    id: {
      /**
       * The name of this field.
       */
      name: 'id'
    
      /**
       * The type of this field.
       */
      type: NexusCore.NexusNonNullDef<'ID'>
    
      /**
       * The documentation of this field.
       */
      description: undefined
    }
  }

  // Enums

  // N/A –– You have not defined any models in your Prisma schema file.
}


//
// Exports
//

// Models

/**
  * Nexus \`objectType\` related configuration based on the \`SomeModel\` model in your Prisma schema.
  *
  * Some documentation
  *
  * @example
  *
  * import { objectType } from 'nexus'
  * import { SomeModel } from 'nexus-prisma'
  *
  * objectType({
  *   name: SomeModel.$name
  *   description: SomeModel.$description
  *   definition(t) {
  *     t.field(SomeModel.id.name, SomeModel.id)
  *   }
  * }) 
  */
export const SomeModel: $Types.SomeModel

// Enums

// N/A –– You have not defined any models in your Prisma schema file."
`;

exports[`When a model has no documentation comment, then it gets the default JSDoc and its description field is null 1`] = `
"import * as Nexus from 'nexus'
import * as NexusCore from 'nexus/dist/core'

//
// Types
//

declare namespace $Types {
  // Models

  /**
    * Nexus \`objectType\` related configuration based on the \`SomeModel\` model in your Prisma schema.
    *
    * ### ️⚠️ Missing Documentation for this Model
    * 
    * Automatically ✨ enrich this JSDoc with information about your enum
    * type by documenting it in your Prisma schema. For example:
    *
    * 
    * \`\`\`prisma
    * /// Lorem ipsum dolor sit amet...
    * model SomeModel {
    *   foo  String
    * }
    * \`\`\`
    * 
    * Learn more about Prisma Schema documentation comments [here](https://www.prisma.io/docs/concepts/components/prisma-schema#comments).
    *
    * @example
    *
    * import { objectType } from 'nexus'
    * import { SomeModel } from 'nexus-prisma'
    *
    * objectType({
    *   name: SomeModel.$name
    *   description: SomeModel.$description
    *   definition(t) {
    *     t.field(SomeModel.id.name, SomeModel.id)
    *   }
    * }) 
    */
  interface SomeModel {
    $name: 'SomeModel'
    $description: null
    /**
     * Nexus \`t.field\` related configuration based on the \`SomeModel.id\` field in your Prisma schema.
      *
      * ### ️⚠️ Missing Documentation for this Model
      * 
      * Automatically ✨ enrich this JSDoc with information about your enum
      * type by documenting it in your Prisma schema. For example:
      *
      * \`\`\`prisma
      * model SomeModel {
      *   /// Lorem ipsum dolor sit amet.
      *   id  String
      * }
      * \`\`\`
      *
      * Learn more about Prisma Schema documentation comments [here](https://www.prisma.io/docs/concepts/components/prisma-schema#comments).
      *
      * @example
      *
      * import { objectType } from 'nexus'
      * import { SomeModel } from 'nexus-prisma'
      *
      * objectType({
      *   name: SomeModel.$name
      *   description: SomeModel.$description
      *   definition(t) {
      *     t.field(SomeModel.id.name, SomeModel.id)
      *   }
      * }) 
      */
    id: {
      /**
       * The name of this field.
       */
      name: 'id'
    
      /**
       * The type of this field.
       */
      type: NexusCore.NexusNonNullDef<'ID'>
    
      /**
       * The documentation of this field.
       */
      description: undefined
    }
  }

  // Enums

  // N/A –– You have not defined any models in your Prisma schema file.
}


//
// Exports
//

// Models

/**
  * Nexus \`objectType\` related configuration based on the \`SomeModel\` model in your Prisma schema.
  *
  * ### ️⚠️ Missing Documentation for this Model
  * 
  * Automatically ✨ enrich this JSDoc with information about your enum
  * type by documenting it in your Prisma schema. For example:
  *
  * 
  * \`\`\`prisma
  * /// Lorem ipsum dolor sit amet...
  * model SomeModel {
  *   foo  String
  * }
  * \`\`\`
  * 
  * Learn more about Prisma Schema documentation comments [here](https://www.prisma.io/docs/concepts/components/prisma-schema#comments).
  *
  * @example
  *
  * import { objectType } from 'nexus'
  * import { SomeModel } from 'nexus-prisma'
  *
  * objectType({
  *   name: SomeModel.$name
  *   description: SomeModel.$description
  *   definition(t) {
  *     t.field(SomeModel.id.name, SomeModel.id)
  *   }
  * }) 
  */
export const SomeModel: $Types.SomeModel

// Enums

// N/A –– You have not defined any models in your Prisma schema file."
`;
